[package]
name = "pyext-example"
version = "0.1.0"
authors = ["fx_kirin"]

[lib]
name = "polygon"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.15.1"
ndarray = "0.15.4"
pyo3 = { version = "0.15", features = ["extension-module"] }
clipper = { git = "https://github.com/plooney/clipper-rs", branch = "master" }
#clipper = { path = "../clipper-rs" }
