[package]
name = "pyext-example"
version = "0.1.0"
authors = ["fx_kirin"]

[lib]
name = "polygon"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.16.1"
rayon = "1.5.1"
ndarray = {version="0.15.4", features = ["rayon"]}
pyo3 = { version = "0.16.1", features = ["extension-module"] }
clip-rs = { git = "https://github.com/plooney/clip-rs", branch = "main" }
#clipper = { path = "../clipper-rs" }
